--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-good-table": "^2.21.11",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.0.0-beta.0",
+    "vuejs-paginate": "^2.1.0",
+    "vuetify": "^3.2.1",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
