--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.13",
     "vue-good-table": "^2.21.11",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
     "vuejs-paginate": "^2.1.0",
     "vuetify": "^3.2.1",
     "webfontloader": "^1.0.0"
